# wgrd-cons-parsers

./: .gitignore  .readthedocs.yml  LICENSE  README.md  baf.py  boobs.py  common.py  compress_ndfbin.py  cons_dic.py  cons_ess.py  cons_sformat.py  cons_utils.py  cons_xml.py  decompress_ndfbin.py  deploy.sh  dic.py  dictionary.py  edat.py  edat.spec  ess.py  ess.spec  generate_sformat.py  mesh.py  mkdocs.yml  ndfbin.py  ndfbin.spec  ppk.spec  pyproject.toml  requirements.txt  scenario.py  sformat.py  sformat.spec  skeleton.py  spk.py  test_endtoend.py  test_fromet.py  test_toet.py  tests.py  tgv.spec  tms.py  (+2 more)
.github/: FUNDING.yml
.github/workflows/: main.yaml
docs/: edat.md  index.md  soundmodding.md
src/wgrd_cons_parsers/: __init__.py  baf.py  boobs.py  common.py  compress_ndfbin.py  cons_utils.py  decode_ess.py  decompress_ndfbin.py  dic.py  dictionary.py  edat.py  encode_ess.py  ess.py  generate_sformat.py  mesh.py  ndfbin.py  ppk.py  scenario.py  sformat.py  skeleton.py  spk.py  (+6 more)
tests/: test_dic.py  test_edat.py  test_mesh.py
wgrd-cons-parsers/: boobs.py  common.py  compress_ndfbin.py  cons_utils.py  decompress_ndfbin.py  edat.py  ess.py  generate_sformat.py  mesh.py  scenario.py  skeleton.py  spk.py  test_endtoend.py  test_fromet.py  tms.py  win.py
wgrd_cons_parsers/: baf.py  common.py  compress_ndfbin.py  cons_utils.py  cons_xml.py  decompress_ndfbin.py  dic.py  dictionary.py  edat.py  ess.py  mesh.py  ndfbin.py  scenario.py  sformat.py  skeleton.py  spk.py  test_endtoend.py  test_fromet.py  test_toet.py  tms.py  version.py  wargameprofile.py  win.py
