[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "wgrd_cons_parsers"
authors = [
    {name = "End", email = "wgrd@3nd.io"},
]
description="Tools for working with the game files of the game Wargame: Red Dragon"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "dingsda",
    'pytest',
]

[tool.setuptools.packages.find]
where=["wgrd_cons_parsers"]
